fix: phone client height overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     margin: 0;
     padding: 0;
+    min-height: 0;
   }
 }
 
